--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "aiohttp>=3.12.13",
     "bs4>=0.0.2",
+    "flask==2.3.2",
     "google-genai>=1.21.1",
     "google-generativeai>=0.8.5",
     "mcp-flight-search>=0.2.1",
